has done basically

--- a/apache-tomcat-9.0.55/webapps/ROOT/WEB-INF/web.xml
+++ b/apache-tomcat-9.0.55/webapps/ROOT/WEB-INF/web.xml
@@ -3,4 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+<!--    <listener>-->
+<!--        <listener-class>com.demo.config.ThymeleafConfig</listener-class>-->
+<!--    </listener>-->
+
+<!--    <servlet>-->
+<!--        <servlet-name>thymeleafServlet</servlet-name>-->
+<!--        <servlet-class>com.demo</servlet-class>-->
+<!--        <load-on-startup>1</load-on-startup>-->
+<!--    </servlet>-->
+
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>thymeleafServlet</servlet-name>-->
+<!--        <url-pattern>/home</url-pattern>-->
+<!--    </servlet-mapping>-->
+
+<!--    <servlet>-->
+<!--        <servlet-name>thymeleafServlet</servlet-name>-->
+<!--        <servlet-class>com.example.servlet.ThymeleafServlet</servlet-class>-->
+<!--        <load-on-startup>1</load-on-startup>-->
+<!--    </servlet>-->
+
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>thymeleafServlet</servlet-name>-->
+<!--        <url-pattern>/home</url-pattern>-->
+<!--    </servlet-mapping>-->
 </web-app>
+
