--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -51,25 +51,32 @@
             <version>1.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
-            <version>3.1.1.RELEASE</version>
-        </dependency>
+<!--        &lt;!&ndash; Thymeleaf servlet integration &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf</groupId>-->
+<!--            <artifactId>thymeleaf-spring5</artifactId>-->
+<!--            <version>3.0.12.RELEASE</version>-->
+<!--        </dependency>-->
 
-        <!-- Thymeleaf servlet integration dependency -->
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf-servlet</artifactId>
-            <version>3.1.1.RELEASE</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf</groupId>-->
+<!--            <artifactId>thymeleaf</artifactId>-->
+<!--            <version>3.1.1.RELEASE</version>-->
+<!--        </dependency>-->
+
+<!--         Thymeleaf servlet integration dependency -->
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf</groupId>-->
+<!--            <artifactId>thymeleaf-servlet</artifactId>-->
+<!--            <version>3.1.1.RELEASE</version>-->
+<!--        </dependency>-->
 
         <!-- Thymeleaf extras if needed (optional) -->
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-java8time</artifactId>
-            <version>3.1.1.RELEASE</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf.extras</groupId>-->
+<!--            <artifactId>thymeleaf-extras-java8time</artifactId>-->
+<!--            <version>3.1.1.RELEASE</version>-->
+<!--        </dependency>-->
 
 
     </dependencies>
