--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -51,7 +51,15 @@
             <version>1.2</version>
         </dependency>
 
-<!--        &lt;!&ndash; Thymeleaf servlet integration &ndash;&gt;-->
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
+        <!--        &lt;!&ndash; Thymeleaf servlet integration &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>org.thymeleaf</groupId>-->
 <!--            <artifactId>thymeleaf-spring5</artifactId>-->
